--- a/COMP231Project/res/layout/activity_doctor_login_btn.xml
+++ b/COMP231Project/res/layout/activity_doctor_login_btn.xml
@@ -1,44 +1,88 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#D6E0FF"
     tools:context=".DoctorLoginBtn" >
+    <TableRow
+            android:id="@+id/trdocprofile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" 
+            android:paddingLeft="10sp">
 
-    <TextView
-        android:id="@+id/textView1"
+        <Button
+            android:id="@+id/btnProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:drawablePadding="-15sp"
+            android:drawableTop="@drawable/btndocviewprofile"
+            android:paddingLeft="10sp"
+            android:paddingRight="5sp"
+            android:paddingTop="25sp"
+            android:textColor="#FFFFFF" />
+
+        <Button
+            android:id="@+id/btnViewPatient"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:drawablePadding="-15sp"
+            android:drawableTop="@drawable/btndocviewpatient"
+            android:paddingLeft="15sp"
+            android:paddingRight="5sp"
+            android:paddingTop="25sp"
+            android:textColor="#FFFFFF" />
+
+        </TableRow>
+        
+    <TableRow
+        android:id="@+id/trdoctime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to Ez-Health" />
-
-    <Button
-        android:id="@+id/btnProfile"
+        android:paddingLeft="10sp" >
+       
+        <Button
+        android:id="@+id/btnschedule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="26dp"
-        android:text="View my Profile" />
-
-    <Button
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/btndocviewschedule"
+        android:textColor="#FFFFFF"
+        android:paddingTop="25sp"
+        android:paddingLeft="10sp"
+        android:paddingRight="5sp"
+        android:drawablePadding="-15sp"/>
+        <Button
         android:id="@+id/btnAppointment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button2"
-        android:layout_alignRight="@+id/btnSchedule"
-        android:layout_centerVertical="true"
-        android:text="View Appointment" />
-
-    <Button
-        android:id="@+id/btnSchedule"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/btndocviewappointment"
+        android:textColor="#FFFFFF"
+        android:paddingTop="25sp"
+        android:paddingLeft="10sp"
+        android:paddingRight="5sp"
+        android:drawablePadding="-15sp"/>
+     </TableRow>
+     
+      <TableRow
+        android:id="@+id/trAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/btnProfile"
-        android:layout_below="@+id/btnProfile"
-        android:layout_marginTop="23dp"
-        android:text="View my Schedule" />
+        android:paddingLeft="10sp" >
+       
+        <Button
+             android:id="@+id/btnAppInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:drawableTop="@drawable/btndocpatientinfo"
+        android:textColor="#FFFFFF"
+        android:paddingTop="25sp"
+        android:paddingLeft="10sp"
+        android:drawablePadding="-15sp"/>
+        
+        </TableRow>
 
-</RelativeLayout>
+</TableLayout>
