Final - Project Code

--- a/COMP231Project/res/layout/activity_patient_homepage.xml
+++ b/COMP231Project/res/layout/activity_patient_homepage.xml
@@ -42,7 +42,7 @@
             android:paddingLeft="10sp">
 
         <Button
-            android:id="@+id/btnAppoinmentDetails"
+            android:id="@+id/btnViewAppointment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
